move table sandbox to route

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<h1>{{ title }}</h1>
-<app-sandbox-table></app-sandbox-table>
+<h1 class="font-bold text-3xl">{{ title }}</h1>
+<div>
+  <router-outlet></router-outlet>
+</div>
